customer-ui/terraform/kubernetes/customer-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-ui
  labels:
    app: customer-ui
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: customer-ui
