customer-ui/terraform/kubernetes/customer-ui/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer-ui
  namespace: default
spec:
  rules:
  - host: customer-service.cloudguru-pk.com
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: customer-ui
          servicePort: 8080
